--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -8,44 +8,37 @@
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/plugin/layui/css/layui.css"/>
     <link rel="stylesheet" href="/css/admin.css"/>
-    <script type="text/javascript" src="/plugin/jquery/jquery.js"></script>
-    <script type="text/javascript" src="/plugin/angularjs/angular.js"></script>
-    <script type="text/javascript" src="/plugin/angularjs/angular-route.js"></script>
-    <script type="text/javascript" src="/plugin/layui/layui.js"></script>
-    <script type="text/javascript" src="/plugin/layui/layui.all.js"></script>
-    <script type="text/javascript" src="/plugin/util/util.js"></script>
-    <script type="text/javascript" src="/js/admin.js"></script>
 </head>
 <body class="layui-layout-body" ng-app="app">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">航天科技小程序后台管理</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
-<!--        <ul class="layui-nav layui-layout-left">-->
-<!--            <li class="layui-nav-item"><a href="">控制台</a></li>-->
-<!--            <li class="layui-nav-item"><a href="">商品管理</a></li>-->
-<!--            <li class="layui-nav-item"><a href="">用户</a></li>-->
-<!--            <li class="layui-nav-item">-->
-<!--                <a href="javascript:;">其它系统</a>-->
-<!--                <dl class="layui-nav-child">-->
-<!--                    <dd><a href="">邮件管理</a></dd>-->
-<!--                    <dd><a href="">消息管理</a></dd>-->
-<!--                    <dd><a href="">授权管理</a></dd>-->
-<!--                </dl>-->
-<!--            </li>-->
-<!--        </ul>-->
-<!--        <ul class="layui-nav layui-layout-right">-->
-<!--            <li class="layui-nav-item">-->
-<!--                <a href="javascript:;">-->
-<!--                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> 贤心-->
-<!--                </a>-->
-<!--                <dl class="layui-nav-child">-->
-<!--                    <dd><a href="">基本资料</a></dd>-->
-<!--                    <dd><a href="">安全设置</a></dd>-->
-<!--                </dl>-->
-<!--            </li>-->
-<!--            <li class="layui-nav-item"><a href="">退了</a></li>-->
-<!--        </ul>-->
+        <!--        <ul class="layui-nav layui-layout-left">-->
+        <!--            <li class="layui-nav-item"><a href="">控制台</a></li>-->
+        <!--            <li class="layui-nav-item"><a href="">商品管理</a></li>-->
+        <!--            <li class="layui-nav-item"><a href="">用户</a></li>-->
+        <!--            <li class="layui-nav-item">-->
+        <!--                <a href="javascript:;">其它系统</a>-->
+        <!--                <dl class="layui-nav-child">-->
+        <!--                    <dd><a href="">邮件管理</a></dd>-->
+        <!--                    <dd><a href="">消息管理</a></dd>-->
+        <!--                    <dd><a href="">授权管理</a></dd>-->
+        <!--                </dl>-->
+        <!--            </li>-->
+        <!--        </ul>-->
+        <!--        <ul class="layui-nav layui-layout-right">-->
+        <!--            <li class="layui-nav-item">-->
+        <!--                <a href="javascript:;">-->
+        <!--                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> 贤心-->
+        <!--                </a>-->
+        <!--                <dl class="layui-nav-child">-->
+        <!--                    <dd><a href="">基本资料</a></dd>-->
+        <!--                    <dd><a href="">安全设置</a></dd>-->
+        <!--                </dl>-->
+        <!--            </li>-->
+        <!--            <li class="layui-nav-item"><a href="">退了</a></li>-->
+        <!--        </ul>-->
     </div>
 
     <div class="layui-side layui-bg-black">
@@ -70,8 +63,14 @@
 
     <div class="layui-footer">
         <!-- 底部固定区域 -->
-        © layui.com - 底部固定区域
+        © 航天科技小程序后台管理
     </div>
+    <script type="text/javascript" src="/plugin/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular-route.js"></script>
+    <script type="text/javascript" src="/plugin/layui/layui.all.js"></script>
+    <script type="text/javascript" src="/plugin/util/util.js"></script>
+    <script type="text/javascript" src="/js/admin.js"></script>
 </div>
 </body>
 </html>
