--- a/src/main/resources/templates/admin/login.html
+++ b/src/main/resources/templates/admin/login.html
@@ -3,28 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <title>登录</title>
-    <script type="text/javascript" src="/plugin/jquery/jquery.js"></script>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="stylesheet" href="/plugin/layui/css/layui.css"/>
+    <link rel="stylesheet" href="/plugin/layui/css/login.css"/>
 </head>
-<body>
-<input id="acc">
-<button id="btn">login</button>
-<script>
-    $(function () {
-        var d={string1:'abc'};
-        $('#btn').click(function () {
-            $.ajax({
-                url: '/admin/dologin',
-                method: 'post',
-                dataType: 'json',
-                contentType: 'application/json',
-                data: JSON.stringify(d),
-                success: function (data) {
-                    console.log(data);
-                }
-            })
-        });
-
-    });
-</script>
+<body class="layui-layout-body" ng-app="app" ng-controller="loginCtrl">
+<div id="LAY_app" class="layadmin-tabspage-none">
+    <div class="layadmin-user-login layadmin-user-display-show" style="display: none;">
+        <div class="layadmin-user-login-main">
+            <div class="layadmin-user-login-box layadmin-user-login-header">
+                <h2>航天科技</h2>
+                <p>航天科技小程序后台管理</p>
+            </div>
+            <div class="layadmin-user-login-box layadmin-user-login-body layui-form">
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-username"></label>
+                    <input type="text" placeholder="工号" class="layui-input" ng-model="model.account">
+                </div>
+                <div class="layui-form-item">
+                    <label class="layadmin-user-login-icon layui-icon layui-icon-password"></label>
+                    <input type="password" placeholder="密码" class="layui-input" ng-model="model.password">
+                </div>
+                <!--                <div class="layui-form-item">-->
+                <!--                    <div class="layui-row">-->
+                <!--                        <div class="layui-col-xs7">-->
+                <!--                            <label class="layadmin-user-login-icon layui-icon layui-icon-vercode"></label>-->
+                <!--                            <input type="text" placeholder="图形验证码" class="layui-input">-->
+                <!--                        </div>-->
+                <!--                        <div class="layui-col-xs5">-->
+                <!--                            <div style="margin-left: 10px;">-->
+                <!--                                <img src="https://www.oschina.net/action/user/captcha" class="layadmin-user-login-codeimg">-->
+                <!--                            </div>-->
+                <!--                        </div>-->
+                <!--                    </div>-->
+                <!--                </div>-->
+                <!--                <div class="layui-form-item" style="margin-bottom: 20px;">-->
+                <!--                    <input type="checkbox" lay-skin="primary" title="记住密码">-->
+                <!--                    <div class="layui-unselect layui-form-checkbox" lay-skin="primary">-->
+                <!--                        <span>记住密码</span><i class="layui-icon layui-icon-ok"></i>-->
+                <!--                    </div>-->
+                <!--                    <a class="layadmin-user-jump-change layadmin-link" style="margin-top: 7px;">忘记密码？</a>-->
+                <!--                </div>-->
+                <div class="layui-form-item">
+                    <button class="layui-btn layui-btn-fluid" ng-click="login()">登 入</button>
+                </div>
+                <!--                <div class="layui-trans layui-form-item layadmin-user-login-other">-->
+                <!--                    <label>社交账号登入</label>-->
+                <!--                    <a href="javascript:;"><i class="layui-icon layui-icon-login-qq"></i></a>-->
+                <!--                    <a href="javascript:;"><i class="layui-icon layui-icon-login-wechat"></i></a>-->
+                <!--                    <a href="javascript:;"><i class="layui-icon layui-icon-login-weibo"></i></a>-->
+                <!--                    <a class="layadmin-user-jump-change layadmin-link">注册帐号</a>-->
+                <!--                </div>-->
+            </div>
+        </div>
+        <div class="layui-trans layadmin-user-login-footer">
+            <p>© 航天科技小程序后台管理</p>
+        </div>
+    </div>
+    <script type="text/javascript" src="/plugin/jquery/jquery.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular.js"></script>
+    <script type="text/javascript" src="/plugin/angularjs/angular-route.js"></script>
+    <script type="text/javascript" src="/plugin/layui/layui.all.js"></script>
+    <script type="text/javascript" src="/plugin/util/util.js"></script>
+    <script type="text/javascript" src="/js/admin.js"></script>
+</div>
 </body>
 </html>
