--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -8,35 +8,35 @@
     <link rel="stylesheet" href="/plugin/layui/css/layui.css"/>
     <link rel="stylesheet" href="/css/admin.css"/>
 </head>
-<body class="layui-layout-body" ng-app="app">
+<body class="layui-layout-body" ng-app="app" >
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">航天科技小程序后台管理</div>
         <!-- 头部区域（可配合layui已有的水平导航） -->
         <ul class="layui-nav layui-layout-left">
-            <li class="layui-nav-item"><a href="">控制台</a></li>
-            <li class="layui-nav-item"><a href="">管理</a></li>
-            <li class="layui-nav-item"><a href="">用户</a></li>
+            <li class="layui-nav-item"><a>控制台</a></li>
+            <li class="layui-nav-item"><a>管理</a></li>
+            <li class="layui-nav-item"><a>用户</a></li>
             <li class="layui-nav-item">
-                <a href="javascript:;">其它系统</a>
+                <a>其它系统</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">邮件管理</a></dd>
-                    <dd><a href="">消息管理</a></dd>
-                    <dd><a href="">授权管理</a></dd>
+                    <dd><a>邮件管理</a></dd>
+                    <dd><a>消息管理</a></dd>
+                    <dd><a>授权管理</a></dd>
                 </dl>
             </li>
         </ul>
         <ul class="layui-nav layui-layout-right">
             <li class="layui-nav-item">
-                <a href="javascript:;">
-                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img"> admin
+                <a>
+                    <img src="/img/head.jpg" class="layui-nav-img"><span ng-bind="admin.department_name+'，'+admin.user_name"></span>
                 </a>
                 <dl class="layui-nav-child">
-                    <dd><a href="">基本资料</a></dd>
-                    <dd><a href="">安全设置</a></dd>
+                    <dd><a>基本资料</a></dd>
+                    <dd><a>安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a href="">退了</a></li>
+            <li class="layui-nav-item"><a style="cursor: pointer;" ng-click="logout()">注销</a></li>
         </ul>
     </div>
 
@@ -45,7 +45,7 @@
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
             <ul class="layui-nav layui-nav-tree" lay-filter="test">
                 <li class="layui-nav-item layui-nav-itemed" ng-click="menuClick(m)" ng-repeat="m in menu">
-                    <a class="" href="javascript:;" ng-bind="m.name"></a>
+                    <a class="" ng-bind="m.name"></a>
                     <dl class="layui-nav-child" ng-repeat="p in m.pages">
                         <dd ng-class="{'layui-this':p.select}"><a ng-href="{{p.path}}" ng-bind="p.name"></a></dd>
                     </dl>
