--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>航天科技小程序后台管理</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
+    <meta name="viewport"
+          content="width=device-width,initial-scale=1.0,minimum-scale=1.0,maximum-scale=1.0,user-scalable=no">
     <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico">
     <link rel="stylesheet" href="/plugin/layui/css/layui.css"/>
     <link rel="stylesheet" href="/css/admin.css"/>
 </head>
-<body class="layui-layout-body" ng-app="app" >
+<body class="layui-layout-body" ng-app="app">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
         <div class="layui-logo">航天科技小程序后台管理</div>
@@ -36,16 +37,16 @@
                     <dd><a>安全设置</a></dd>
                 </dl>
             </li>
-            <li class="layui-nav-item"><a style="cursor: pointer;" ng-click="logout()">注销</a></li>
+            <li class="layui-nav-item"><a ng-click="logout()">注销</a></li>
         </ul>
     </div>
 
     <div class="layui-side layui-bg-black">
         <div class="layui-side-scroll">
             <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-            <ul class="layui-nav layui-nav-tree" lay-filter="test">
-                <li class="layui-nav-item layui-nav-itemed" ng-click="menuClick(m)" ng-repeat="m in menu">
-                    <a class="" ng-bind="m.name"></a>
+            <ul class="layui-nav layui-nav-tree">
+                <li class="layui-nav-item" ng-class="{'layui-nav-itemed':m.select}" ng-click="menuClick(m)" ng-repeat="m in menu">
+                    <a><span ng-bind="m.name"></span></a>
                     <dl class="layui-nav-child" ng-repeat="p in m.pages">
                         <dd ng-class="{'layui-this':p.select}"><a ng-href="{{p.path}}" ng-bind="p.name"></a></dd>
                     </dl>
