--- a/src/main/resources/templates/admin/user/user.html
+++ b/src/main/resources/templates/admin/user/user.html
@@ -1,15 +1,21 @@
 <form>
     <div class="layui-form-item">
         <div class="layui-inline">
-            <label class="layui-form-label">员工姓名</label>
+            <label class="layui-form-label">姓名</label>
             <div class="layui-input-inline">
                 <input type="text" class="layui-input" ng-model="search.string1">
             </div>
         </div>
         <div class="layui-inline">
+            <label class="layui-form-label">部门</label>
+            <div class="layui-input-inline">
+                <select class="layui-input" ng-options="x.id as x.name for x in department" ng-model="search.number1"></select>
+            </div>
+        </div>
+        <div class="layui-inline">
             <label class="layui-form-label">账号状态</label>
             <div class="layui-input-inline">
-                <select class="layui-input" ng-options="x.id as x.name for x in state" ng-model="search.number1"></select>
+                <select class="layui-input" ng-options="x.id as x.name for x in state" ng-model="search.number2"></select>
             </div>
         </div>
         <div class="layui-inline">
@@ -24,6 +30,7 @@
         <th>员工工号</th>
         <th>员工姓名</th>
         <th>员工部门</th>
+        <th>注册时间</th>
         <th>账号状态</th>
         <th>操作</th>
     </tr>
@@ -33,6 +40,7 @@
         <td ng-bind="d.id"></td>
         <td ng-bind="d.name"></td>
         <td ng-bind="d.department_name"></td>
+        <td ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></td>
         <td>
             <span ng-if="d.state==1">未审核</span>
             <span ng-if="d.state==2">正常</span>
