--- a/src/main/resources/templates/admin/addjob/addjobrecord.html
+++ b/src/main/resources/templates/admin/addjob/addjobrecord.html
@@ -24,8 +24,9 @@
     <span>加班<span ng-bind="statistic.userCount"></span>人，</span>
     <span>午餐<span ng-bind="statistic.meal1Count"></span>人，</span>
     <span>晚餐<span ng-bind="statistic.meal2Count"></span>人，</span>
-    <span>乘车(16:30)<span ng-bind="statistic.bus1Count"></span>人，</span>
-    <span>乘车(19:30)<span ng-bind="statistic.bus2Count"></span>人</span>
+    <span>早车(08:00)<span ng-bind="statistic.busToCount"></span>人，</span>
+    <span>晚车(16:30)<span ng-bind="statistic.bus1Count"></span>人，</span>
+    <span>晚车(19:30)<span ng-bind="statistic.bus2Count"></span>人</span>
 </div>
 <hr>
 <table class="layui-table">
@@ -36,7 +37,8 @@
         <th>申请人部门</th>
         <th>加班时间</th>
         <th>用餐</th>
-        <th>乘车</th>
+        <th>早车</th>
+        <th>晚车</th>
         <th>申报时间</th>
     </tr>
     </thead>
@@ -47,12 +49,13 @@
         <td ng-bind="d.department_name"></td>
         <td ng-bind="d.date"></td>
         <td>
-            <span ng-if="d.meal==0">不用餐</span>
-            <span ng-if="d.meal==1">用餐(<span ng-bind="d.meal_time==1?'午餐':d.meal_time==2?'晚餐':'午餐,晚餐'"></span>)</span>
+            <span ng-if="d.meal==1"><span ng-bind="d.meal_time==1?'午餐':d.meal_time==2?'晚餐':'午餐,晚餐'"></span></span>
         </td>
         <td>
-            <span ng-if="d.bus==0">不乘车</span>
-            <span ng-if="d.bus==1">乘车(<span ng-bind="d.bus_time==1?'16:30':'19:30'"></span>)</span>
+            <span ng-if="d.bus_to==1">08:00</span>
+        </td>
+        <td>
+            <span ng-if="d.bus==1"><span ng-bind="d.bus_time==1?'16:30':'19:30'"></span></span>
         </td>
         <td ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></td>
     </tr>
