--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -6,6 +6,7 @@ input[type="checkbox"],
 input[type="radio"] {
     width: 18px;
     height: 18px;
+    margin-right: 5px;
     vertical-align: middle;
     cursor: pointer;
 }
@@ -22,4 +23,8 @@ input[type="radio"] {
 
 .layui-input-block {
     line-height: 38px;
+}
+
+.layui-row:after, .layui-row:before {
+    display: none;
 }
