--- a/src/main/resources/templates/admin/user/admin.html
+++ b/src/main/resources/templates/admin/user/admin.html
@@ -48,9 +48,10 @@
             <span ng-if="d.state==3">已禁用</span>
         </td>
         <td>
-            <button class="layui-btn layui-btn-xs" ng-if="d.state==2" ng-click="editState(d,3)">停用</button>
+            <button class="layui-btn layui-btn-xs" ng-if="d.state==2" ng-click="editState(d,3)">禁用</button>
             <button class="layui-btn layui-btn-xs" ng-if="d.state==3" ng-click="editState(d,2)">启用</button>
-            <button class="layui-btn layui-btn-xs" ng-click="showEditModal()">权限</button>
+            <button class="layui-btn layui-btn-xs" ng-click="showEditModal(d)">权限</button>
+            <button class="layui-btn layui-btn-xs">重置密码</button>
             <button class="layui-btn layui-btn-xs" ng-click="delete(d)">删除</button>
         </td>
     </tr>
@@ -59,58 +60,39 @@
 <div id="page"></div>
 <div class="modals">
     <div id="modal" class="modal">
-        <form >
+        <form>
             <div class="layui-form-item">
-                <label class="layui-form-label">输入框</label>
+                <label class="layui-form-label">员工</label>
                 <div class="layui-input-block">
-                    <input type="text" name="title" required  lay-verify="required" placeholder="请输入标题" autocomplete="off" class="layui-input">
+                    <select class="layui-input" ng-options="x.id as x.name for x in user" ng-model="model.userid" ng-disabled="lock"></select>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">密码框</label>
-                <div class="layui-input-inline">
-                    <input type="password" name="password" required lay-verify="required" placeholder="请输入密码" autocomplete="off" class="layui-input">
-                </div>
-                <div class="layui-form-mid layui-word-aux">辅助文字</div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">选择框</label>
+                <label class="layui-form-label">权限(小程序)</label>
                 <div class="layui-input-block">
-                    <select name="city" lay-verify="required" class="layui-input">
-                        <option value=""></option>
-                        <option value="0">北京</option>
-                        <option value="1">上海</option>
-                        <option value="2">广州</option>
-                        <option value="3">深圳</option>
-                        <option value="4">杭州</option>
-                    </select>
+                    <div class="layui-row" ng-repeat="d in pageApp">
+                        <div class="layui-col-xs12"><strong ng-bind="d.name"></strong></div>
+                        <div class="layui-col-xs3 layui-col-xs-offset1" ng-repeat="p in d.pages">
+                            <input type="checkbox" ng-checked="p.select"><span ng-bind="p.name"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="layui-form-item">
-                <label class="layui-form-label">复选框</label>
+                <label class="layui-form-label">权限(后台)</label>
                 <div class="layui-input-block">
-                    <input type="checkbox" name="like[write]" title="写作">写作
-                    <input type="checkbox" name="like[read]" title="阅读" checked>阅读
-                    <input type="checkbox" name="like[dai]" title="发呆">发呆
-                </div>
-            </div>
-            <div class="layui-form-item">
-                <label class="layui-form-label">单选框</label>
-                <div class="layui-input-block">
-                    <input type="radio" name="sex" value="男" title="男">男
-                    <input type="radio" name="sex" value="女" title="女" checked>女
-                </div>
-            </div>
-            <div class="layui-form-item layui-form-text">
-                <label class="layui-form-label">文本域</label>
-                <div class="layui-input-block">
-                    <textarea name="desc" placeholder="请输入内容" class="layui-textarea"></textarea>
+                    <div class="layui-row" ng-repeat="d in pageAdmin">
+                        <div class="layui-col-xs12"><strong ng-bind="d.name"></strong></div>
+                        <div class="layui-col-xs3 layui-col-xs-offset1" ng-repeat="p in d.pages">
+                            <input type="checkbox" ng-checked="p.select"><span ng-bind="p.name"></span>
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <button class="layui-btn" lay-submit lay-filter="formDemo">立即提交</button>
-                    <button type="reset" class="layui-btn layui-btn-primary">重置</button>
+                    <button class="layui-btn">保存</button>
+                    <button class="layui-btn layui-btn-primary" ng-click="closeModal()">取消</button>
                 </div>
             </div>
         </form>
