--- a/src/main/resources/templates/admin/user/admin.html
+++ b/src/main/resources/templates/admin/user/admin.html
@@ -91,9 +91,8 @@
             </div>
             <div class="layui-form-item">
                 <div class="layui-input-block">
-                    <button class="layui-btn" ng-if="!lock" ng-click="add()">保存</button>
+                    <button class="layui-btn" ng-if="!lock" ng-click="add()">新增</button>
                     <button class="layui-btn" ng-if="lock" ng-click="edit()">保存</button>
-                    <button class="layui-btn layui-btn-primary" ng-click="closeModal()">取消</button>
                 </div>
             </div>
         </form>
