--- a/src/main/resources/templates/admin/produce/plan.html
+++ b/src/main/resources/templates/admin/produce/plan.html
@@ -54,7 +54,8 @@
         <td ng-bind="d.mark"></td>
         <td>
             <button class="layui-btn layui-btn-xs" ng-click="showEditModal(d)">修改</button>
-            <button class="layui-btn layui-btn-xs" ng-click="showStepModal(d)">流转</button>
+            <button class="layui-btn layui-btn-xs" ng-click="showEditStepModal(d)">流转</button>
+            <button class="layui-btn layui-btn-xs" ng-click="showStepModal(d)">进度</button>
         </td>
     </tr>
     </tbody>
@@ -123,7 +124,7 @@
             </div>
         </form>
     </div>
-    <div id="modal-step" class="modal">
+    <div id="modal-step-edit" class="modal">
         <form>
             <div class="layui-form-item">
                 <label class="layui-form-label">备注</label>
@@ -134,9 +135,20 @@
             <div class="layui-form-item">
                 <div class="layui-input-block">
                     <button class="layui-btn" ng-click="editStep(true)">流转</button>
-                    <button class="layui-btn layui-btn-danger" ng-if="model.step==1||model.step==10||model.step==2||model.step==20" ng-click="editStep(false)">滞留</button>
+                    <button class="layui-btn layui-btn-danger" ng-if="model.step==1||model.step==10||model.step==2||model.step==20" ng-click="editStep(false)">停滞</button>
                 </div>
             </div>
         </form>
+    </div>
+    <div id="modal-step" class="modal">
+        <ul class="layui-timeline">
+            <li class="layui-timeline-item" ng-repeat="d in planStep">
+                <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
+                <div class="layui-timeline-content layui-text">
+                    <h3 class="layui-timeline-title"><span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span></h3>
+                    <p ng-bind="d.message"></p>
+                </div>
+            </li>
+        </ul>
     </div>
 </div>
