--- a/src/main/resources/templates/admin/produce/plan.html
+++ b/src/main/resources/templates/admin/produce/plan.html
@@ -145,7 +145,16 @@
             <li class="layui-timeline-item" ng-repeat="d in planStep">
                 <i class="layui-icon layui-timeline-axis">&#xe63f;</i>
                 <div class="layui-timeline-content layui-text">
-                    <h3 class="layui-timeline-title"><span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span></h3>
+                    <h4 class="layui-timeline-title">
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==0">计划未下发</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==1">开票领料</span>
+                        <span class="layui-badge" ng-if="d.step==10">开票领料(停滞)</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==2">备件备产</span>
+                        <span class="layui-badge" ng-if="d.step==20">备件备产(停滞)</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==3">生产准备就绪</span>
+                        <span class="layui-badge layui-bg-green" ng-if="d.step==4">生产进行中</span>
+                        <span ng-bind="d.systime|date:'yyyy-MM-dd HH:mm:ss'"></span>
+                    </h4>
                     <p ng-bind="d.message"></p>
                 </div>
             </li>
